# kkday-ai-quality

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .woodpecker.yml  ARCHITECTURE.md  CLAUDE.md  HANDOFF-config-ssot.md  README.md  docker-compose.dev.yml  docker-compose.yml  start.sh  stop.sh
backend/: .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  judge_intake.py  pyproject.toml  requirements.txt  run.sh  seed_mock.py  smoke_test.py
backend/alembic/: env.py
backend/alembic/versions/: 124748246b38_add_judgment_runs_log_column.py  209f902fd979_drop_intake_items_and_backup_tables.py  2751391347f7_drop_retired_l3_model_votes_ensemble_.py  2c8ed24edb24_two_stage_rename_attributions_prejudge_.py  2f1949f4267f_add_prompt_eval_runs_table.py  31c690f0dd74_add_judgments_source_column.py  3771110d1d2d_create_product_reviews_table.py  3860ce73192a_drop_judgments_true_label_columns.py  4ac23d6d20b4_baseline_schema_squashed_2026_07_23.py  581ca1e72296_add_prompt_testcases_table.py  5c7d2e91ab34_add_evidence_cache_table.py  5c7d2e91ab34_add_evidence_snapshot_table.py  648f09878b62_split_5_source_tables_judgments_source_.py  663fbf45e97c_drop_roster_quality_calibration_tables.py  6d4dfda55ce3_drop_judgments_dimension_column.py  7c05d105e825_flatten_judgments_data_into_clean_.py  7f1daa86d0a8_add_product_reviews_judges_columns.py  85a7dea69f9d_judgments_jsonb_blob_to_typed_columns_.py  87226c7ffb83_conversations_table_new_csv_header_.py  8ff0b8cfc8f2_drop_product_reviews_judges_columns_1_n_.py  a3b9d5e72f04_backfill_fixed_to_confirmed.py  a3f1c9d2b7e4_llm_usage_reasoning_tokens.py  a54632b6343e_drop_orphaned_external_accounts_table.py  a7c31f0e4d92_drop_users_password_hash.py  a7f3c1d90b21_add_judgments_item_id_index.py  a8e4f21c7d05_add_batches_note_column.py  b3e8f5a27c61_drop_users_rename_settings.py  b3e9c2a10f47_backfill_judgment_auto_confirm.py  b5c7e91f3a26_add_judgment_history_snapshot_index.py  b7d2e4f1a9c3_judgments_model_votes.py  b9f5d32e8a16_add_product_reviews_fusion_columns.py  bd77052f7222_baseline_schema.py  bf198999cae4_rename_domain_machine_values.py  c1a7e93f2b48_add_judgments_sentiment_score.py  c24e5b0964ce_roster_tables.py  c399ac488d44_drop_prompt_testcases_table.py  c4f1a7d20e83_add_true_label_audit_columns.py  c7ae2e2be254_drop_verdict_axis_single_axis_.py  c8e2f5a71d94_add_prompt_drafts_and_sandbox_compare.py  c8e5a2d94f17_add_judgment_runs_table.py  (+12 more)
backend/app/: README.md
backend/app/api/: README.md  main.py
backend/app/api/routers/: __init__.py  admin_import.py  auth.py  config.py  evidence.py  exports.py  findings.py  inbound.py  llm_usage.py  overview.py  problems.py  rules.py  settings.py
backend/app/core/: README.md  __init__.py  ai_judge.py  auth.py  auth_verifiers.py  category_groups.py  config.py  crypto.py  db.py  errors.py  export_jobs.py  flags.py  global_rule.py  import_jobs.py  job_registry.py  logging_setup.py  paths.py  pricing.py  roster.py  rule_export.py  schema.py  settings.py  shutdown.py  source_mapping.py  source_registry.py  tables.py  utils.py
backend/app/core/db/: README.md  __init__.py  _shared.py  attribution.py  attribution_history.py  comparison.py  datapack.py  export.py  export_stats.py  findings.py  ingest.py  judgment_history.py  judgment_runs.py  llm_usage.py  prejudge_runs.py  prejudge_targets.py  problems.py  prompt_drafts.py  prompt_eval_runs.py  prompt_sandbox_runs.py  prompt_testcases.py  qc_evidence.py  rule_versions.py  settings_store.py  source_registry.py  tables.py  users.py
backend/app/core/judge_config/: README.md  ai_judge.py  global_rule.py  pricing.py  product_vertical.py  rule_export.py  source_mapping.py  sources.py
backend/app/core/permissions/: README.md  __init__.py  base.py  be2_provider.py  deps.py  local_provider.py  permission_keys.py
backend/app/ingestion/: base.py
backend/app/ingestion/connectors/: __init__.py  mock_csv.py
backend/app/ingestion/parsers/: review.py  (+8 more)
backend/app/judge/: README.md  accuracy.py  adequacy.py  arbiter.py  batch_api.py  calibration.py  classify.py  codex.py  diagnose.py  domain_router.py  dspy_engine.py  ensemble.py  field_codex.json  judge_logic_config.json  judge_rules.json  pii_mask.py  pipeline.py  prejudge.py  prejudge_batch.py  prompt_debug.py  prompt_eval.py  prompt_sandbox.py  prompt_source.py  prompt_testcases.py  rule_refeed.py  run_log.py
backend/app/repositories/: README.md  __init__.py  _common.py  interaction_repo.py  product_repo.py  signal_repo.py  sync_repo.py
backend/fixtures/: presale_postsale.json  product_150665.json  product_content_by_oids.json
backend/fixtures/intake/: README.md
backend/scripts/tools/: build_comparison_report.py
backend/sql/: bigquery_extract.sql  intake_merged_extract.sql  product_content_by_oids.sql  schema.sql
backend/tests/: conftest.py  test_accuracy_ensemble.py  test_accuracy_supervised.py  test_all_tables_have_create_migration.py  test_api_endpoints.py  test_attribution_overview.py  test_auth_verifiers.py  test_batch_api.py  test_calibration.py  test_category_groups.py  test_docs_gate.py  test_domain_router.py  test_dspy_engine.py  test_ensemble.py  test_eval_prompt_metrics.py  test_export_domain_prompts.py  test_export_inbound_smoke.py  test_export_jobs_lifecycle.py  test_export_model_snapshot.py  test_findings_preserve.py  test_flags.py  test_graceful_shutdown.py  test_judgment_history.py  test_judgment_runs.py  test_list_problems_filters.py  test_llm_gateway.py  test_llm_usage.py  test_logging_setup.py  test_migration_chain_known_gap.py  test_overview_ai_judge.py  test_permissions.py  test_pii_mask.py  test_prejudge_batch.py  test_prejudge_concurrency.py  test_prejudge_core.py  test_prejudge_ensemble.py  test_prejudge_l2_depth.py  test_prejudge_pack.py  test_product_reviews_ingest.py  test_product_vertical.py  (+21 more)
backend/tests/prompt_lab/: conftest.py  pytest.ini  test_c2_pipeline.py  test_c3_c6_pipeline.py  test_evidence.py  test_gemini_gateway.py  test_metrics.py  test_prompt_parser.py  test_resume.py  test_schemas.py  test_split.py
(+654 files in other folders)
