[project]
name = "kkday-ai-quality-backend"
version = "0.0.1"
description = "AI 商品質檢平台 — 後端（FastAPI + 判決引擎，沿用 ProductContentAIChecker 資產）"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "openai>=1.50.0",
    "litellm>=1.90.0",       # LLM gateway（env.llm_gateway=litellm 啟用；統一介面 + cost，fallback/語意快取待 Phase 7）
    "openfeature-sdk>=0.10",  # 判決閾值旗標標準介面（避供應商鎖定；provider 包 judgment 配置，Phase 7 換 Flagsmith）
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",  # pydantic-settings 解析 env_file 所需
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0.0",
    "pyjwt>=2.9.0",
    "sqlalchemy>=2.0.0",       # 資料層 dialect 抽象（SQLite dev + PostgreSQL prod）
    "alembic>=1.13.0",         # schema 版本遷移
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver（app 操作庫 + QC DB 連線測試共用）
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
# 信心度準確度「深度版」選用依賴（輕量版不需要）：
#   - 線上格式/編碼校驗：現以 pydantic + 白名單（arbiter/prejudge）等效 Guardrails ValidChoices（零額外 LLM）。
#     深度版改掛 guardrails-ai（on_fail=reask 自動修正重判 1 次）。注意：新版 ValidChoices 在 guardrails hub，
#     需 `guardrails hub install hub://guardrails/valid_choices`（額外 hub 設定）。
#   - 離線信心度校準（judge/calibration.py）：以人工 true_label 擬合 conf_raw→calibrated（isotonic/Platt）
#     + ECE 前後對比。用 scikit-learn（輕量、無 torch）；**不用 netcal**（會拉 torch/gpytorch/pyro/tensorboard
#     數百 MB，違背零重依賴）。fit 需 sklearn（缺則優雅 skip）；apply 為純 numpy 免依賴。
#   - 樣本品質體檢：cleanlab（find_label_issues 挖混淆/標註錯誤，label-free 一致性報告，見 accuracy.py）。
# 啟用：pip install -e ".[accuracy]"
accuracy = [
    "guardrails-ai>=0.5.0",
    "cleanlab>=2.6.0",
    "scikit-learn>=1.3",
]

# ── 格式化 / Lint（ruff，需 pip install -e ".[dev]"）──
# 格式化：ruff format .（Black 相容，鏈式/長行依 line-length 自動換行）
# 檢查：  ruff check .（E/F 錯誤 + I import 排序 + B bug + UP 升級）
[tool.ruff]
line-length = 100          # 對齊前端 Prettier printWidth，跨語言一致
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "E501",  # 行長交給 ruff format 管；E501 只對折不斷的字串/中文註解狂報雜訊（官方建議用 formatter 後關閉）
    "B008",  # FastAPI 標準寫法即 `Depends(...)`/`File(...)` 放參數預設；ruff 對 FastAPI 的已知誤報，官方建議 ignore
]

[tool.ruff.format]
quote-style = "double"     # Python 慣例雙引號（與現有碼一致）

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# 啟動：uvicorn app.api.main:app --reload --port 8100（先 pip install -e .）
# 模組：app.core（共用）· app.judge（③ 法官）· app.api（FastAPI gateway）
# 未來支柱：app.audit（① 審品）· app.writer（② 撰寫）—— 待遷
